# lifting_ws

./: .gitignore  README.MD
src/bt_task_msgs/: CMakeLists.txt  package.xml
src/bt_task_msgs/msg/: LiftMotorMsg.msg
src/lifting_ctrl/: CMakeLists.txt  README.MD  package.xml
src/lifting_ctrl/launch/: start_850pro_motor.launch  start_motor.launch
src/lifting_ctrl/msg/: LiftMotorMsg.msg
src/lifting_ctrl/scripts/: crc_check.py  json_config.py  lifting_ctrl_interface_node.py  lifting_ctrl_monitor_node.py  lifting_ctrl_service_node.py  lifting_ctrl_service_node_850pro.py  lifting_motor_client_node.py  lifting_motor_ctrl.py  lifting_motor_ctrl_850pro.py  lifting_motor_interface_client_node.py  serial_encapsulation.py
src/lifting_ctrl/scripts/backup/: lifting_ctrl_service_node-2024-3-4-15-00.py
src/lifting_ctrl/scripts/config/: 1_lifting_motor_config.json  2_lifting_motor_config.json
src/lifting_ctrl/scripts/config/backup/2025-5-17-sep-aloha/: 1_lifting_motor_config.json
